some clean code