@@ -24,6 +24,7 @@
  */
 
 
+
 package cooper.designpatterns.behavioral.interpreter;
 
 import java.util.StringTokenizer;
@@ -35,94 +36,59 @@ import java.util.StringTokenizer;
  * @version 0.1.1, 2011-11-01
  */
 public class Kid {
-    String frname, lname, club;
+    String frname;
+    String lname;
+    String club;
     int age;
     float time;
 
-    /**
-     * Constructs ...
-     *
-     * @param line
-     */
     public Kid(String line) {
         StringTokenizer tok = new StringTokenizer(line);
-        String lnum = tok.nextToken();
-
+        tok.nextToken();
         frname = tok.nextToken();
         lname = tok.nextToken();
-        age = new Integer(tok.nextToken()).intValue();
+        age = Integer.valueOf(tok.nextToken()).intValue();
         club = tok.nextToken();
-        time = new Float(tok.nextToken()).floatValue();
+        time = Float.valueOf(tok.nextToken()).floatValue();
     }
 
-    /**
-     * Method description
-     *
-     * @return
-     */
     public int getAge() {
         return age;
     }
 
-    /**
-     * Method description
-     *
-     * @return
-     */
     public String getClub() {
         return club;
     }
 
-    /**
-     * Method description
-     *
-     * @param key
-     * @return
-     */
     public Object getData(int key) {
         switch (key) {
-            case ParseVar.FRNAME:
+            case ParseVar.FRNAME :
                 return frname;
 
-            case ParseVar.LNAME:
+            case ParseVar.LNAME :
                 return lname;
 
-            case ParseVar.CLUB:
+            case ParseVar.CLUB :
                 return club;
 
-            case ParseVar.AGE:
-                return new Integer(age);
+            case ParseVar.AGE :
+                return Integer.valueOf(age);
 
-            case ParseVar.TIME:
-                return new Float(time);
+            case ParseVar.TIME :
+                return Float.valueOf(time);
         }
 
         return null;
     }
 
-    /**
-     * Method description
-     *
-     * @return
-     */
     public String getFrname() {
         return frname;
     }
 
-    /**
-     * Method description
-     *
-     * @return
-     */
     public String getLname() {
         return lname;
     }
 
-    /**
-     * Method description
-     *
-     * @return
-     */
     public float getTime() {
         return time;
     }
